product_docs/docs/efm/3.10/efm_user/12_upgrading_existing_cluster.mdx
---
title: "Upgrading an Existing Cluster"
legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-postgres-failover-manager/user-guides/user-guide/3.10/upgrading_existing_cluster.html"
---

<div id="upgrading_existing_cluster" class="registered_link"></div>

Failover Manager provides a utility to assist you when upgrading a Failover Manager cluster. To upgrade an existing cluster, you must:

1.  Install Failover Manager 3.10 on each node of the cluster. For detailed information about installing Failover Manager, see [Installing Failover Manager](03_installing_efm/#installing_efm).
2.  After installing Failover Manager, invoke the `efm upgrade-conf` utility to create the `.properties` and `.nodes` files for Failover Manager 3.10. The Failover Manager installer installs the upgrade utility ([efm upgrade-conf](07_using_efm_utility/#efm_upgrade_conf)) to the `/usr/edb/efm-3.10/bin directory`. To invoke the utility, assume root privileges, and invoke the command:

```text
efm upgrade-conf <cluster_name>
```

The efm `upgrade-conf` utility locates the `.properties` and `.nodes` files of pre-existing clusters and copies the parameter values to a new configuration file for use by Failover Manager. The utility saves the updated copy of the configuration files in the `/etc/edb/efm-3.10` directory.

1.  Modify the `.properties` and `.nodes` files for EFM 3.10, specifying any new preferences. Use your choice of editor to modify any additional properties in the properties file (located in the `/etc/edb/efm-3.10` directory) before starting the service for that node. For detailed information about property settings, see [The Cluster Properties File](04_configuring_efm/01_cluster_properties/#cluster_properties).

!!! Note
    `db.bin` is a required property. When modifying the properties file, ensure that the `db.bin` property specifies the location of the Postgres `bin` directory.

1.  Use a version-specific command to stop the old Failover Manager cluster; for example, you can use the following command to stop a version 3.10 cluster:

```text
/usr/efm-3.10/bin/efm stop-cluster efm
```

1.  Start the new [Failover manager service](08_controlling_efm_service/#controlling_efm_service) (`edb-efm-3.10`) on each node of the cluster.

The following example demonstrates invoking the upgrade utility to create the `.properties` and `.nodes` files for a Failover Manager installation:

```text
# /usr/edb/efm-3.10/bin/efm upgrade-conf efm
Checking directory /etc/edb/efm-3.9
Processing efm.properties file
The following properties were added in addition to those in previous installed version:
     external.address
     update.physical.slots.period
Checking directory /etc/edb/efm-3.9
Processing efm.nodes file
Upgrade of files is finished. The owner and group for properties and nodes files have been set as 'efm'.
```

If you are [using a Failover Manager configuration without sudo](04_configuring_efm/04_extending_efm_permissions/#running_efm_without_sudo), include the `-source` flag and specify the name of the directory in which the configuration files reside when invoking `upgrade-conf`. If the directory is not the configuration default directory, the upgraded files will be created in the directory from which the `upgrade-conf` command was invoked.

**Please note**: If you are using a unit file, you must manually update the file to reflect the new Failover Manager service name when you perform an upgrade.

## Un-installing Failover Manager

After upgrading to Failover Manager 3.10, you can use your native package manager to remove previous installations of Failover Manager. For example, use the following command to remove Failover Manager 3.9 and any unneeded dependencies:

-   On RHEL or CentOS 7.x:

```text
yum remove edb-efm39
```

-   On RHEL or CentOS 8.x:

```text
dnf remove edb-efm39
```

-   On Debian or Ubuntu:

```text
apt-get remove edb-efm39
```

-   On SLES:

```text
zypper remove edb-efm39
```

## Performing a Database Update (Minor Version)

This section describes how to perform a quick minor database version upgrade. You can use the steps that follow to upgrade from one minor version to another (for example, from 10.1.5 to version 10.2.7), or to apply a patch release for a version.

You should first update the database server on each Standby node of the Failover Manager cluster. Then, perform a switchover, promoting a Standby node to the role of Primary within the Failover Manager cluster. Then, perform a database update on the old primary node.

On each node of the cluster you must perform the following steps to update the database server:

1.  Stop the Failover Manager agent.
2.  Stop the database server.
3.  Update the database server.
4.  Start the database service.
5.  Start the Failover Manager agent.

For detailed information about controlling the Advanced Server service, or upgrading your version of Advanced Server, please see the EDB Postgres Advanced Server Guide, available at:

[https://www.enterprisedb.com/docs](/epas/latest/)

When your updates are complete, you can use the [efm set-priority](07_using_efm_utility/#efm_set_priority) command to add the old primary to the front of the standby list (if needed), and then switchover to return the cluster to its original state.
